--- a/src/inputs/inputs.css
+++ b/src/inputs/inputs.css
@@ -5,10 +5,19 @@
 
 input {
     height: 1.5em;
-    width: 200px;
-    border: 2px solid var(--color-primary);
+    width: 130px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: var(--color-primary);
 }
 
 input:hover, input:focus{
+    outline: none;
     border-color: var(--color-accent);
+}
+
+div .input-field-container{
+    width: 230px;
+    display: flex;
+    justify-content: space-between;
 }
