--- a/src/App.css
+++ b/src/App.css
@@ -7,15 +7,15 @@ body {
 .Centered {
   position: absolute;
   top: 0px;
-  padding: 20px;
-  left: calc((100% - 500px)/2);
-  right: calc((100% - 500px)/2);
+  padding: 0px;
+  left: 20px;
+  right: 20px;
+  width: calc(100% - 40px);
   bottom: 0px;
-  width: 500px;
   background-color: white;
   align-items: center;
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   flex-flow: column;
 }
 
@@ -23,3 +23,25 @@ h1 {
   margin-top: 0px;
 }
 
+div.header {
+  width: 100%;
+  margin: 0px;
+  padding: 20px 0px 0px 0px;
+  display: flex;
+  flex-flow: row;
+  justify-content: space-evenly;
+  background-image: linear-gradient(teal, aliceblue);
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
+@media only screen and (min-width: 600px) {
+  .Centered {
+    width: 500px;
+    left: calc((100% - 500px)/2);
+    right: calc((100% - 500px)/2);
+  }
+}
