--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,10 @@ h1 {
   margin-top: 0px;
 }
 
+h2, h3 {
+  margin: 0px;
+}
+
 div.header {
   width: 100%;
   margin: 0px;
@@ -94,7 +98,8 @@ div.menu {
 }
 
 .message-list-container{
-  max-height: 400px;
+  overflow: auto;
+  min-height: 3em;
 }
 
 .message-field-container{
@@ -104,7 +109,7 @@ div.menu {
 
 .send-message-contents{
   min-height: 1em;
-  height: 10em;
+  height: 4em;
   resize: vertical;
   margin-bottom: 10px;
 }
