--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,7 @@ a {
   position: absolute;
   bottom: 0px;
   padding-bottom: 20px;
+  padding-left: 50px;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
@@ -113,4 +114,10 @@ div.menu {
   height: 4em;
   resize: vertical;
   margin-bottom: 10px;
+}
+
+ul {
+  list-style: none;
+  padding-left: 25px;
+  padding-right: 25px;
 }
