--- a/src/App.css
+++ b/src/App.css
@@ -88,6 +88,7 @@ div.error-container {
 div.menu {
   width: calc(100% - 20px);
   padding: 10px;
+  position: absolute;
 }
 
 .speaker{
@@ -102,22 +103,16 @@ div.menu {
 .message-list-container{
   overflow: auto;
   min-height: 3em;
-}
-
-.message-field-container{
-  display: flex;
-  flex-flow: column;
-}
-
-.send-message-contents{
-  min-height: 1em;
-  height: 4em;
-  resize: vertical;
-  margin-bottom: 10px;
+  margin-top: 20px;
 }
 
 ul {
   list-style: none;
   padding-left: 25px;
   padding-right: 25px;
+}
+
+p.message{
+  margin-block-start: 0.5em;
+  margin-block-end: 0.5em;
 }
