--- a/src/App.css
+++ b/src/App.css
@@ -105,7 +105,7 @@ div.menu {
   margin-top: 20px;
 }
 
-ul {
+message-list-container ul {
   list-style: none;
   padding-left: 25px;
   padding-right: 25px;
