--- a/src/App.css
+++ b/src/App.css
@@ -103,6 +103,7 @@ div.menu {
   overflow: auto;
   min-height: 3em;
   margin-top: 20px;
+  width: 100%;
 }
 
 message-list-container ul {
@@ -114,4 +115,8 @@ message-list-container ul {
 p.message{
   margin-block-start: 0.5em;
   margin-block-end: 0.5em;
+}
+
+.react-json-view{
+  width: 450px;
 }
